--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>2.3.7.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
